--- a/windows.html
+++ b/windows.html
@@ -35,6 +35,7 @@
     <div class="stepimage"><img src="assets/narratorwindow.JPG" alt="Picture of the narrator window in windows 10"></img></div><br>
     <div class="steptext">Note : Double click a word, and use control + arrow key to have narrator read for you.</div><br>
     <div class="stepimage"><img src="assets/narratorshortcut.JPG" alt="Picture of windows 10 narrator guide shortcut"></img></div><br>
+    <div id="arrowsmobile"><a href="#narrator">←</a><div id="spacer"></div><a href="#enlarge">→</a></div>
     <hr>
     <div class="videotitle" id="enlarge">Enlarge Text</div>
     <div class="steptext">Click the video to play or scroll down for step by step instructions.</div><br>
@@ -55,8 +56,9 @@
     <div class="stepimage"><img src="assets/textsizeslider.JPG" alt="Picture of the text size slider highlighted on windows 10"></img></div><br>
     <div class="steptext">Step 6 : Press apply.</div><br>
     <div class="stepimage"><img src="assets/textsizeapply.jpg" alt="Picture of the text size apply button highlighted on windows 10"></img></div><br>
+    <div id="arrowsmobile"><a href="#narrator">←</a><div id="spacer"></div><a href="#enlarge">→</a></div>
 </div>
-<div id="arrows"><a href="#narrator">←</a><div id="spacer"></div><a href="#enlarge">→</a></div>
+<div id="arrowsmobile"><a href="#narrator">←</a><div id="spacer"></div><a href="#enlarge">→</a></div>
 </div>
 
 
