--- a/zoom.html
+++ b/zoom.html
@@ -24,6 +24,7 @@
         <div class="steptext">Step 4 : Zoom will now install, once it is done it will let you know it has been installed.</div><br>
         <div class="stepimage"><img src="assets/installdone.JPG" alt="installed zoom software."></img></div><br>
         <div class="steptext">Step 5 : Press done, Zoom is now installed.</div><br>
+        <div id="arrowsmobile"><a href="#accessing">←</a><div id="spacer"></div><a href="#links">→</a></div>
         <hr>
         <div class="videotitle" id="links">Using Zoom</div>
         <div class="steptext">Scroll down for step by step instructions.</div><br>
@@ -41,5 +42,6 @@
         <div class="stepimage"><img src="assets/joinwithaudio.JPG" alt="Zoom join with audio window"></img></div><br>
         <div class="steptext">Note : Presssing the link will also work. You will simply have to accept the dialog box.</div><br>
         <div class="stepimage"><img src="assets/launchmeeting.JPG" alt="Launch meeting in browser for zoom"></img></div><br>
+        <div id="arrowsmobile"><a href="#accessing">←</a><div id="spacer"></div><a href="#links">→</a></div>
         <div id="arrows"><a href="#accessing">←</a><div id="spacer"></div><a href="#links">→</a></div>
 </body>
