--- a/youtube.html
+++ b/youtube.html
@@ -31,6 +31,8 @@
         <div class="stepimage"><img src="assets/results.JPG" alt="youtube search results"></img></div><br>
         <div class="steptext">Step 8 : The video will now be loaded.<br>Note : To watch similar videos click the videos on the sidebar.</div><br>
         <div class="stepimage"><img src="assets/sidebar.jpg" alt="youtube video sidebar highlighted"></img></div><br>
+        <a href="windows.html">Windows</a><a href="youtube.html">Youtube</a><a href="zoom.html">Zoom</a>
+<div id="arrows"><a href="#accessing">←</a><div id="spacer"></div><a href="#links">→</a></div>
         <hr>
         <div class="videotitle" id="links">Youtube Links</div>
         <div class="steptext">Scroll down for step by step instructions.</div><br>
@@ -46,5 +48,7 @@
         <div class="stepimage"><img src="assets/video.JPG" alt="youtube video"></img></div><br>
         <div class="steptext">Note : Most of the time clicking the link will also work.</div><br>
         <div class="stepimage"><img src="assets/linkhighlight.JPG" alt="user message with youtube link highlighted"></img></div><br>
+        <div id="arrowsmobile"><a href="#accessing">←</a><div id="spacer"></div><a href="#links">→</a></div>
         <div id="arrows"><a href="#accessing">←</a><div id="spacer"></div><a href="#links">→</a></div>
+        
     </body>
