--- a/windows.html
+++ b/windows.html
@@ -12,7 +12,7 @@
         <a href="windows.html">Windows</a><a href="youtube.html">Youtube</a><a href="zoom.html">Zoom</a></div>
         
     </header>
-    <div id="container">
+    <main><section>
         <div class="videotitle" id="narrator" >Windows Narrator</div>
         <div class="steptext">Click the video to play or scroll down for step by step instructions.</div><br>
         <div class="embeddedvideo">
@@ -36,7 +36,9 @@
     <div class="steptext">Note : Double click a word, and use control + arrow key to have narrator read for you.</div><br>
     <div class="stepimage"><img src="assets/narratorshortcut.JPG" alt="Picture of windows 10 narrator guide shortcut"></img></div><br>
     <div id="arrowsmobile"><a href="#narrator">←</a><div id="spacer"></div><a href="#enlarge">→</a></div>
+</section>
     <hr>
+    <section>
     <div class="videotitle" id="enlarge">Enlarge Text</div>
     <div class="steptext">Click the video to play or scroll down for step by step instructions.</div><br>
     <div class="embeddedvideo">
@@ -57,9 +59,10 @@
     <div class="steptext">Step 6 : Press apply.</div><br>
     <div class="stepimage"><img src="assets/textsizeapply.jpg" alt="Picture of the text size apply button highlighted on windows 10"></img></div><br>
     <div id="arrowsmobile"><a href="#narrator">←</a><div id="spacer"></div><a href="#enlarge">→</a></div>
+</section>
 </div>
-<div id="arrowsmobile"><a href="#narrator">←</a><div id="spacer"></div><a href="#enlarge">→</a></div>
-</div>
+<div id="arrows"><a href="#narrator">←</a><div id="spacer"></div><a href="#enlarge">→</a></div>
+</main>
 
 
 </body>
