--- a/youtube.html
+++ b/youtube.html
@@ -12,7 +12,8 @@
         <a href="windows.html">Windows</a><a href="youtube.html">Youtube</a><a href="zoom.html">Zoom</a></div>
         
     </header>
-    <div id="container">
+    <main>
+        <section>
         <div class="videotitle" id="accessing">Accessing Youtube</div>
         <div class="steptext">Scroll down for step by step instructions.</div><br>
         <div class="steptext">Step 1 : Open an internet browser</div><br>
@@ -32,8 +33,10 @@
         <div class="steptext">Step 8 : The video will now be loaded.<br>Note : To watch similar videos click the videos on the sidebar.</div><br>
         <div class="stepimage"><img src="assets/sidebar.jpg" alt="youtube video sidebar highlighted"></img></div><br>
         <a href="windows.html">Windows</a><a href="youtube.html">Youtube</a><a href="zoom.html">Zoom</a>
+    </section>
 <div id="arrows"><a href="#accessing">←</a><div id="spacer"></div><a href="#links">→</a></div>
         <hr>
+        <section>
         <div class="videotitle" id="links">Youtube Links</div>
         <div class="steptext">Scroll down for step by step instructions.</div><br>
         <div class="steptext">Step 1 : Highlight a link and copy it</div><br>
@@ -50,5 +53,6 @@
         <div class="stepimage"><img src="assets/linkhighlight.JPG" alt="user message with youtube link highlighted"></img></div><br>
         <div id="arrowsmobile"><a href="#accessing">←</a><div id="spacer"></div><a href="#links">→</a></div>
         <div id="arrows"><a href="#accessing">←</a><div id="spacer"></div><a href="#links">→</a></div>
-        
+    </section>
+    </main>
     </body>
