--- a/zoom.html
+++ b/zoom.html
@@ -12,7 +12,9 @@
         <a href="windows.html">Windows</a><a href="youtube.html">Youtube</a><a href="zoom.html">Zoom</a></div>
         
     </header>
-    <div id="container">
+
+    <main>
+        <section>
         <div class="videotitle" id="accessing">Installing Zoom</div>
         <div class="steptext">Scroll down for step by step instructions.</div><br>
         <div class="steptext">Step 1 : Go to zoom.com/download and click download.</div><br>
@@ -25,7 +27,9 @@
         <div class="stepimage"><img src="assets/installdone.JPG" alt="installed zoom software."></img></div><br>
         <div class="steptext">Step 5 : Press done, Zoom is now installed.</div><br>
         <div id="arrowsmobile"><a href="#accessing">←</a><div id="spacer"></div><a href="#links">→</a></div>
+    </section>
         <hr>
+        <section>
         <div class="videotitle" id="links">Using Zoom</div>
         <div class="steptext">Scroll down for step by step instructions.</div><br>
         <div class="steptext">Step 1 : Get the zoom meeting details from a friend</div><br>
@@ -44,4 +48,6 @@
         <div class="stepimage"><img src="assets/launchmeeting.JPG" alt="Launch meeting in browser for zoom"></img></div><br>
         <div id="arrowsmobile"><a href="#accessing">←</a><div id="spacer"></div><a href="#links">→</a></div>
         <div id="arrows"><a href="#accessing">←</a><div id="spacer"></div><a href="#links">→</a></div>
+    </section>
+        </main>
 </body>
