--- a/youtube.html
+++ b/youtube.html
@@ -33,8 +33,8 @@
         <div class="steptext">Step 8 : The video will now be loaded.<br>Note : To watch similar videos click the videos on the sidebar.</div><br>
         <div class="stepimage"><img src="assets/sidebar.jpg" alt="youtube video sidebar highlighted"></img></div><br>
         <a href="windows.html">Windows</a><a href="youtube.html">Youtube</a><a href="zoom.html">Zoom</a>
+        <div id="arrowsmobile"><a href="#accessing">←</a><div id="spacer"></div><a href="#links">→</a></div>
     </section>
-<div id="arrows"><a href="#accessing">←</a><div id="spacer"></div><a href="#links">→</a></div>
         <hr>
         <section>
         <div class="videotitle" id="links">Youtube Links</div>
